--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Althea e-Portfolio</title>
  <link rel="stylesheet" href="style.css">
+ <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +21,7 @@
     </div>
 
     <!-- Header -->
-    <header>
+    <header class="hero-banner">
         <h1>Welcome to Teacher Althea's e-Portfolio</h1>
     </header>
 
@@ -40,7 +41,7 @@
         </div>
     </section>
     <!-- Welcome  Section -->
-    <section id="welcome" class="fs1" style="background-color: rgba(255, 171, 220, 0.54)">
+    <section id="welcome" class="fs1">
       <div class="container" >
           <h2 class="section-title">Welcome</h2>
           <div class="FS-Content">
@@ -155,6 +156,22 @@
                 <img src="certificate1.jpg" alt="Certificate 1">
                 <img src="certificate2.jpg" alt="Certificate 2">
                 <img src="certificate3.jpg" alt="Certificate 3">
+                <img src="certificate4.jpg" alt="Certificate 4">
+                <img src="certificate5.jpg" alt="Certificate 5">
+                <img src="certificate6.jpg" alt="Certificate 6">
+                <img src="image1.jpg" alt="Certificate 1">
+                <img src="image2.jpg" alt="Certificate 2">
+                <img src="image3.jpg" alt="Certificate 3">
+                <img src="image4.jpg" alt="Certificate 4">
+                <img src="image5.jpg" alt="Certificate 5">
+                <img src="image6.jpg" alt="Certificate 6">
+                <img src="image7.jpg" alt="Certificate 7">
+                <img src="image8.jpg" alt="Certificate 8">
+                <img src="image9.jpg" alt="Certificate 9">
+                <img src="image10.jpg" alt="Certificate 10">
+                <img src="image11.jpg" alt="Certificate 11">
+                <img src="image12.jpg" alt="Certificate 12">
+                <img src="image13.jpg" alt="Certificate 13">
             </div>
         </div>
     </section>
@@ -184,23 +201,39 @@
             </div>
             
             <button class="accordion">The Learning Environment</button>
-            <div class="panel">
-                <p>Details on the physical and emotional environment of the classroom.</p>
+            <div class="panel"><br>
+                <p>At the Integrated Laboratory School (ILS), I observed that the classrooms are spacious and filled with natural light, creating a bright and inviting atmosphere. The good ventilation makes the air fresh, contributing to a comfortable space for students to learn. I saw that the classrooms are designed in a flexible way, allowing teachers to easily switch between different teaching styles, whether it’s group work or independent study. This setup encourages students to collaborate and engage with each other, which makes the learning experience feel more interactive and dynamic.</p><br>
+                <p>I also observed how technology plays a big role in the learning environment at ILS. The classrooms are equipped with interactive whiteboards and digital tools, which teachers use to present lessons in new, exciting ways. I saw that these tools help capture the students' attention and make learning more engaging. The integration of technology not only supports creativity in lessons but also helps students develop important digital skills. The environment at ILS feels dynamic, with everything well-organized, allowing students to stay focused and engaged throughout the lessons.</p><br>
+                <p>At City Central Elementary School, I noticed that the classrooms are also comfortable and well-ventilated. The space feels welcoming, with fresh air flowing through, which helps students concentrate during lessons. The classroom layout is more traditional, with desks arranged for direct instruction. Despite the simplicity of the setup, I saw that it still allows students to focus on the lesson while giving them space to interact when needed. The calm and organized atmosphere helps students feel settled, which makes it easier for them to absorb information.</p><br>
+                <p>I observed that at City Central, the classrooms are structured to minimize distractions, which helps students stay on task. Teachers maintain an orderly environment, ensuring that students can focus on their lessons without unnecessary interruptions. The simplicity of the classroom design encourages concentration and discipline. I saw that this environment allows students to engage with the material in a focused way, and it encourages participation, even though the setup is more traditional.</p><br>
+                <p>Both ILS and City Central Elementary provide environments that support learning in different ways. I observed that at ILS, the classrooms are designed to be flexible, dynamic, and technology-driven, which promotes interaction and engagement. At City Central, the traditional setup creates a calm, organized space where students can focus and learn effectively. In both schools, I saw that the environment is intentionally created to help students succeed, whether through interactive tools or a structured, focused classroom.</p><br>
             </div>
 
             <button class="accordion">Instructional Materials</button>
-            <div class="panel">
-                <p>Evaluation of instructional materials used to facilitate learning.</p>
+            <div class="panel"><br>
+                <p>At the Integrated Laboratory School (ILS), I noticed that the materials teachers use are really varied, which makes learning more interesting. Teachers mix in technology like interactive whiteboards, apps, and online tools to bring lessons to life. I saw how these tools help students engage with the material in different ways—whether it’s watching videos, taking online quizzes, or playing educational games. It’s not just about sitting and listening; students get to experience the lesson. This mix of materials keeps things fresh, helping students stay focused and remember what they learn.</p><br>
+                <p>Even though technology is a big part of the classroom, traditional materials like textbooks, workbooks, and printed handouts are still important. These printed resources work alongside the digital tools, giving students a chance to practice and really apply what they’ve learned. For example, after a fun video or interactive game, students might use a workbook to dig deeper into the topic. This combination of tech and paper-based materials makes sure all students stay engaged and get the help they need to succeed.</p><br>
+                <p>At City Central Elementary School, I saw that the materials are more traditional, but still work really well. Teachers rely on textbooks, chalkboards, and worksheets to guide lessons. While the classroom doesn’t have as much technology, these materials are clear and organized, helping students understand what’s being taught. Teachers also use visual aids like charts and flashcards to make concepts easier to understand, which helps students get a better grasp of the material.</p><br>
+                <p>At City Central, even though the materials are more basic, teachers use them in hands-on ways. For example, they might write out a problem on the chalkboard and break it down step by step, or hand out worksheets so students can practice new skills. This simple, straightforward method helps ensure that students fully understand what they’re learning before moving on to something else. It’s clear that even traditional materials are used effectively to support students' learning.</p><br>
+                <p>In both schools, I saw that the materials used really support students in their learning journey. At ILS, the mix of digital tools and traditional materials makes lessons fun and interactive. At City Central, the traditional materials are well-organized and clear, making sure students can focus and really understand the lessons. Whether it’s through modern tech or classic resources, both schools make sure they have the right materials to help students succeed.</p><br>
             </div>
 
             <button class="accordion">The Teaching-Learning Process</button>
-            <div class="panel">
-                <p>A breakdown of the teaching and learning activities observed.</p>
+            <div class="panel"><br>
+                <p>At the Integrated Laboratory School (ILS), I observed that the teaching and learning process is very dynamic and interactive. Teachers don’t just stand in front of the class and talk; they encourage students to actively participate in lessons. I saw that lessons often start with an engaging activity—like a group discussion or an interactive video—that draws students in and gets them thinking. Teachers use a variety of methods to explain concepts, such as hands-on activities, digital tools, and visual aids. This approach keeps students engaged and allows them to learn in different ways, whether they are listening, touching, or seeing. The classroom feels more like a place where everyone is involved in learning, and students are encouraged to ask questions, share their ideas, and collaborate with their peers.</p><br>
+                <p>Technology plays a big part in the teaching process at ILS. I observed that teachers use digital resources like interactive whiteboards and educational apps to make lessons more exciting and relevant. I saw students actively participating in activities on tablets or laptops, solving problems, and working on projects. These tools not only make learning more fun but also help students develop important skills that they will need in the future. The teaching at ILS is all about keeping the students engaged and providing them with opportunities to explore and learn in an interactive way.</p><br>
+               <p>At City Central Elementary School, the teaching and learning process is more traditional but still effective. I noticed that teachers tend to focus on direct instruction, where they explain concepts and then ask students to practice or discuss what they’ve learned. Lessons usually begin with a clear explanation of the topic, followed by exercises or worksheets for students to complete. While the process is more teacher-centered, it works well for making sure all students understand the key points of the lesson. Teachers encourage participation by asking questions and having students share their answers, which helps create a sense of involvement even in this more structured environment.</p><br>
+                <p>Even though the approach at City Central is more traditional, I observed that teachers still make efforts to make the learning experience engaging. They use visual aids to support their teaching. This helps students better understand the material by providing a visual representation of what’s being taught. While the lessons may be more focused on the teacher’s explanation, the students are still given opportunities to participate and practice what they’ve learned.<p><br>
+                <p>Both schools have effective teaching and learning processes, though they approach it in different ways. At ILS, the focus is on creating a dynamic, interactive classroom where students are constantly engaged and involved in their learning. Technology plays a big role in making lessons more exciting and relevant. At City Central, the process is more traditional, with a stronger focus on direct instruction and structured activities, but it’s still effective in helping students learn the material. Both methods ensure that students are given the tools they need to succeed, even if they go about it in different ways.</p><br>
             </div>
 
             <button class="accordion">Assessing Students' Learning</button>
-            <div class="panel">
-                <p>Methods used by the teacher to assess student learning and progress.</p>
+            <div class="panel"><br>
+                <p>At the Integrated Laboratory School (ILS), I observed that assessing student learning is an ongoing, interactive process. Teachers don’t just give one big test at the end of the lesson; they use a variety of methods to check understanding throughout the learning process. For example, I saw that teachers frequently use quizzes, group discussions, and even games to gauge how well students are grasping the material. These assessments are not just for grading, but are also a way for teachers to adjust their teaching if something isn’t quite working. Additionally, teachers use digital tools like interactive quizzes or instant feedback apps, allowing students to get immediate responses and helping them understand what they need to work on right away. This continuous and varied approach to assessment helps keep students on track and makes learning feel more like a two-way conversation between the teacher and the student.</p><br>
+                <p>Another thing I noticed at ILS is how teachers assess students through projects and presentations. Rather than relying solely on written tests, students are often asked to work on group projects or present their findings to the class. This kind of assessment helps students apply what they've learned in a more real-world setting, and I saw how it encouraged students to think critically and creatively. It also gave them the chance to show their understanding in different ways, whether through writing, speaking, or collaborating with others.</p><br>
+                <p>At City Central Elementary School, the assessment process is more traditional. I observed that teachers rely more on written tests, quizzes, and worksheets to assess student learning. While these methods may not be as interactive as those at ILS, they are still effective in helping teachers check if students have understood the material. I saw that teachers often go over the answers with the class after a quiz or test, making sure everyone understands any mistakes and reinforcing key concepts. This helps students learn from their errors and solidifies their understanding of the lesson.</p><br>
+                <p>In addition to tests, I noticed that teachers at City Central also use oral questioning to assess students. They ask questions throughout the lesson to make sure students are following along and encourage participation by calling on different students to share their answers. This helps teachers gauge students' understanding and adjust their teaching if needed. Even though it’s more teacher-directed, I saw that these assessments still create opportunities for students to engage with the material and demonstrate their learning.</p><br>
+                <p>Both schools have their own way of assessing student learning, but both are effective. At ILS, the focus is on using a variety of methods, including digital tools, projects, and real-time feedback, to assess students in an interactive and ongoing way. This makes learning feel like a continuous process. At City Central, the approach is more traditional, with written tests and quizzes, but it’s still a solid method for checking understanding. Both schools show that assessment is not just about giving grades; it's about helping students learn and grow by giving them the opportunity to reflect on and demonstrate their knowledge in different ways.</p><br>
             </div>
         </div>
     </section>
